ListView的紀錄項目的手勢操作命令綁定處理

--- a/XFListViewRefresh/XFListViewRefresh/XFListViewRefresh/Views/MainPage.xaml
+++ b/XFListViewRefresh/XFListViewRefresh/XFListViewRefresh/Views/MainPage.xaml
@@ -9,7 +9,7 @@
     <StackLayout 
       Margin="20"
       HorizontalOptions="Fill" VerticalOptions="Fill">
-        <Label Text="{Binding Title}" />
+        <Label Text="{Binding Title}" FontAttributes="Italic,Bold"/>
         <ListView
             HorizontalOptions="Fill" VerticalOptions="FillAndExpand"
             ItemsSource="{Binding DataItemList}"
